; ModuleID = '/home/carl/AnghaBench/zfs/cmd/zed/extr_zed_file.c_zed_file_is_locked.c'
source_filename = "/home/carl/AnghaBench/zfs/cmd/zed/extr_zed_file.c_zed_file_is_locked.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.flock = type { i64, i32, i64, i64, i32 }

@EBADF = common dso_local global i32 0, align 4
@errno = common dso_local global i32 0, align 4
@F_WRLCK = common dso_local global i64 0, align 8
@SEEK_SET = common dso_local global i32 0, align 4
@F_GETLK = common dso_local global i32 0, align 4
@F_UNLCK = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @zed_file_is_locked(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca %struct.flock, align 8
  store i32 %0, i32* %3, align 4
  %5 = load i32, i32* %3, align 4
  %6 = icmp slt i32 %5, 0
  br i1 %6, label %7, label %9

7:                                                ; preds = %1
  %8 = load i32, i32* @EBADF, align 4
  store i32 %8, i32* @errno, align 4
  store i32 -1, i32* %2, align 4
  br label %30

9:                                                ; preds = %1
  %10 = load i64, i64* @F_WRLCK, align 8
  %11 = getelementptr inbounds %struct.flock, %struct.flock* %4, i32 0, i32 0
  store i64 %10, i64* %11, align 8
  %12 = load i32, i32* @SEEK_SET, align 4
  %13 = getelementptr inbounds %struct.flock, %struct.flock* %4, i32 0, i32 4
  store i32 %12, i32* %13, align 8
  %14 = getelementptr inbounds %struct.flock, %struct.flock* %4, i32 0, i32 3
  store i64 0, i64* %14, align 8
  %15 = getelementptr inbounds %struct.flock, %struct.flock* %4, i32 0, i32 2
  store i64 0, i64* %15, align 8
  %16 = load i32, i32* %3, align 4
  %17 = load i32, i32* @F_GETLK, align 4
  %18 = call i64 @fcntl(i32 %16, i32 %17, %struct.flock* %4)
  %19 = icmp slt i64 %18, 0
  br i1 %19, label %20, label %21

20:                                               ; preds = %9
  store i32 -1, i32* %2, align 4
  br label %30

21:                                               ; preds = %9
  %22 = getelementptr inbounds %struct.flock, %struct.flock* %4, i32 0, i32 0
  %23 = load i64, i64* %22, align 8
  %24 = load i64, i64* @F_UNLCK, align 8
  %25 = icmp eq i64 %23, %24
  br i1 %25, label %26, label %27

26:                                               ; preds = %21
  store i32 0, i32* %2, align 4
  br label %30

27:                                               ; preds = %21
  %28 = getelementptr inbounds %struct.flock, %struct.flock* %4, i32 0, i32 1
  %29 = load i32, i32* %28, align 8
  store i32 %29, i32* %2, align 4
  br label %30

30:                                               ; preds = %27, %26, %20, %7
  %31 = load i32, i32* %2, align 4
  ret i32 %31
}

declare dso_local i64 @fcntl(i32, i32, %struct.flock*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
